[package]
name = "pkrs"
version = "0.2.0"
edition = "2021"
description = "A simple wrapper around the PluralKit API"
authors = ["Snowdrift"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_either = { version = "0.2" }
reqwest = { version = "0.11", features = ["json"] }
time = { version = "0.3", features = ["serde-well-known"] }

# dumb duct tape due to the serde version of this crate
# not being compatible with nightly rust
# have to force a newer version
# todo: this is dumb, is there a better way?
proc-macro2 = "1.0.63"