[package]
name = "pkrs"
version = "0.3.1"
edition = "2021"
description = "A simple wrapper around the PluralKit API"
authors = ["lynxize"]
license = "MIT"
repository = "https://github.com/lynxize/pkrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_either = { version = "0.2" }
reqwest = { version = "0.11", features = ["json"] }
time = { version = "0.3", features = ["serde-well-known"] }
uuid = { version = "1.4", features = ["serde"]}
url = { version = "2.4", features = ["serde"]}
