[package]
name = "pkrs"
version = "0.4.0"
edition = "2021"
description = "A simple wrapper around the PluralKit API"
authors = ["lynxize"]
license = "MIT"
repository = "https://github.com/lynxize/pkrs"

[features]
default = ["reqwest-client"]
reqwest-client = ["dep:reqwest"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_either = { version = "0.2" }
time = { version = "0.3", features = ["serde-well-known"] }
uuid = { version = "1.4", features = ["serde"]}
url = { version = "2.4", features = ["serde"]}

reqwest = { version = "0.12", features = ["json"], optional = true }